# unwind

./: .gitignore  CHANGELOG.md  CLA.md  CLA_POLICY.md  CONTRIBUTING.md  DISCLAIMER.md  GAP-ANALYSIS.md  GROUND_TRUTH.md  LICENSE  MAINTENANCE_AGENT.md  OPEN_CORE_BOUNDARY.md  OpenClaw_Security_Research_Briefing.docx  PRE-LAUNCH-CHECKLIST.md  README.md  README_SCOPE.md  SECURITY.md  SECURITY_COVERAGE.md  SESSION-SUMMARY-2026-02-22.md  SESSION-UPDATE-2026-02-23.md  UNWIND final possible edits pre build.pages  UNWIND_BDE_Breakdown.md  UNWIND_Project_Spec.md  UNWIND_Project_Spec_v2.md  UNWIND_Project_Spec_v3.md  UNWIND_Remote_Setup_Step1_Oracle.docx  craft-auth-README.md  evidence_pack_001.txt  evidence_pack_001_focused.txt  evidence_pack_002.txt  fix-orb.py  ghostmode-summary.txt  mock_mcp_server.py  oracle-feedback.md  patch_a2_renderEvent.py  patch_amber_dashboard.py  patch_amber_full.py  patch_app.py  patch_final.py  patch_index_html.py  pyproject.toml  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  cla-signers.txt
.github/workflows/: cla-check.yml
cadence/: __init__.py  cli.py  state.e  state.en
cadence/engine/: cognitive_load.py  rhythm.py
cadence/protocol/: crip.py
cadence/storage/: profile.py  pulse.py  state.py
deploy/systemd/: README.md  unwind-sidecar.service.example
docs/: COMPATIBILITY_MATRIX.md  CONTEXT_RESILIENCE_PLAN.md  CONTINUITY.md  CRAFT_Protocol_v3.md  CRAFT_Protocol_v4.1.md  CRAFT_Protocol_v4.2.md  CRAFT_Protocol_v4.md  DECISIONS_LOG.md  FAILOVER.md  GHOST_EGRESS_GUARD_SPEC.md  PI_TROUBLESHOOTING.md  SECRET_REGISTRY_DESIGN.md  SECURITY-FRAMEWORK-MAPPING.md  SECURITY-TASKS-24H.md  SIX_LAYER_ALIGNMENT.md  audit-round1-answers.md
docs/KEEL/: INFRASTRUCTURE_WIRING.md  REBOOT_BLOCK.md  SESSION_STATE.md  STATE_FINGERPRINT.json  STATE_FINGERPRINT.md  SYNC_RUNBOOK.md
docs/adr/: ADR-000-template.md  ADR-001-ghost-egress-before-ssrf.md
docs/archive/: ARCHITECTURE_V2.md
docs/public/: ACQUISITION_PITCH_60S.md  ARCHITECTURE_OVERVIEW.md  EXECUTIVE_SUMMARY.md  INTERVIEW_SCRIPT.md  INVENTED_LANGUAGE_SIMPLE.md  INVENTED_LANGUAGE_THREAT.md  KARPATHY_AUTORESEARCH_POSITIONING.md  OPERATOR_GUIDE.md  PRE_LAUNCH_ADVERSARIAL_AUDIT.md  SECURITY_FRAMEWORK_MAPPING.md  TECHNICAL_ARCHITECTURE_BRIEF.md  THREAT_MODEL_BOUNDARIES.md  WHAT_IS_UNWIND.md
docs/runbooks/: SENTINEL_OAUTH_RECOVERY.md
ghostmode/: README.md  __init__.py  cli.py  event_log.py  proxy.py  pyproject.toml  shadow_vfs.py
memory/: CRITICAL_IP.md  RECOVERY_PACKET.md
openclaw-adapter/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-adapter/src/: index.ts
openclaw-adapter/tests/: adapter.test.ts  afterToolCall.contract.test.ts  beforeToolCall.contract.test.ts
sentinel/: OVERNIGHT-BRIEF-2026-02-24.md  __init__.py  cli.py  runner.py
sentinel/openclaw/: AGENTS.md  SOUL.md  USER.md  setup-sentinel.sh
sentinel/tasks/: __init__.py  cve_watcher.py  mcp_spec_tracker.py  safety_news.py  test_runner.py
specs/sentinel-overnight/: ADAPTER_THREAT_MODEL.yaml  OPENCLAW_ADAPTER_FAILCLOSED_SPEC.yaml  OPENCLAW_PLUGIN_SDK_REVIEW.yaml  SIDECAR_SESSION_PRINCIPAL_DESIGN.yaml  UNWIND_SIDECAR_API_SPEC.yaml
templates/: intel-scorecard.md  weekly-triage.md
tests/: __init__.py  test_amber_mediator.py  test_amber_store.py  test_amber_telemetry.py  test_approval_windows.py  test_breakglass.py  test_cadence_bridge.py  test_canary_randomization.py  test_craft_capabilities.py  test_craft_lifecycle.py  test_craft_persistence_and_queue.py  test_craft_verifier_core.py  test_credential_exposure.py  test_dashboard_session_labels.py  test_dns_pinning.py  test_egress_policy.py  test_enforcement.py  test_enforcement_in_path.py  test_event_store_schema_migration.py  test_events_retention.py  test_exec_tunnel.py  test_exec_tunnel_bypass.py  test_explanations.py  test_ghost_approve_discard.py  test_ghost_egress.py  test_ghost_tool_classification.py  test_ghostmode.py  test_health_schema.py  test_manifest_filter.py  test_no_false_green.py  test_path_url_regression.py  test_phase2.py  test_phase3.py  test_phase4.py  test_policy_source.py  test_preimage_builder.py  test_proxy.py  test_response_validator.py  test_rollback.py  test_rubber_stamp.py  (+15 more)
tests/cadence/: test_cognitive_load.py  test_crip.py  test_rhythm.py  test_storage.py
tests/canary/: README.md  __init__.py  canary-mapping.md  test_canary_contracts.py
tools/: _mock_upstream.py  _mock_upstream_ghost.py  breakglass_drill.py  build-recovery-packet.py  canary_monitor.py  eng-ops.sh  evidence_pack.py  failover.sh  ghostmode_e2e.py  go_certificate_check.py  keel-checkpoint.sh  key_rotation_drill.py  mcp_stdio_probe.py  recover-context.sh  rollback_drill.py  start-stack.sh  sync-from-pi.safe.sh  sync-from-pi.sh  sync-to-pi.safe.sh  sync-to-pi.sh
tools/cla/: README.md  add-signer.sh
tools/key-proxy/: key_proxy.py
tools/sentinel-audit/: sentinel_audit.py
unwind/: __init__.py  config.py  proxy.py  session.py  startup_validator.py
unwind/anchoring/: __init__.py  chain_export.py
unwind/cli/: __init__.py  main.py
unwind/conversational/: __init__.py  query.py
unwind/craft/: __init__.py  canonical.py  capabilities.py  crypto.py  lifecycle.py  persistence.py  verifier.py
unwind/dashboard/: __init__.py  __main__.py  app.py  app.py.bak.1772571891  away_mode.py  explanations.py
unwind/enforcement/: __init__.py  amber_mediator.py  amber_rollout.py  amber_store.py  amber_telemetry.py  approval_windows.py  breakglass.py  cadence_bridge.py  canary.py  credential_exposure.py  dlp_lite.py  egress_policy.py  exec_tunnel.py  ghost_egress.py  manifest_filter.py  path_jail.py  pipeline.py  policy_source.py  response_validator.py  rubber_stamp.py  secret_registry.py  self_protection.py  signature_verify.py  ssrf_shield.py  supply_chain.py  taint_decay.py  telemetry.py
unwind/export/: __init__.py  exporter.py
unwind/recorder/: __init__.py  event_store.py  preimage.py
unwind/sidecar/: __init__.py  health_schema.py  models.py  server.py
(+28 files in other folders)
