[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unwind-mcp"
version = "0.1.0"
description = "See Everything. Undo Anything. Test Anything Safely. — Security middleware for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "David"},
]
keywords = ["mcp", "ai-agents", "security", "proxy", "audit", "rollback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[project.scripts]
unwind = "unwind.cli.main:main"

[project.urls]
Homepage = "https://github.com/unwind-mcp/unwind"
Documentation = "https://github.com/unwind-mcp/unwind#readme"
Repository = "https://github.com/unwind-mcp/unwind"
Issues = "https://github.com/unwind-mcp/unwind/issues"

[tool.setuptools.packages.find]
include = ["unwind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
