[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unwind-mcp"
version = "0.1.0"
description = "See Everything. Undo Anything. Test Anything Safely. — Security middleware for AI agents."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "David Russell"},
]
keywords = ["mcp", "ai-agents", "security", "proxy", "audit", "rollback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.25",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]

[project.scripts]
unwind = "unwind.cli.main:main"

[project.urls]
Homepage = "https://github.com/brugai/unwind"
Documentation = "https://github.com/brugai/unwind#readme"
Repository = "https://github.com/brugai/unwind"
Issues = "https://github.com/brugai/unwind/issues"

[tool.setuptools.packages.find]
include = ["unwind*"]

[tool.setuptools.package-data]
unwind = ["dashboard/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
